# cucoqu.rlib

./: .gitignore  Cargo.toml  GPT-3.md  GPT-3（日本語版）.md  Makefile  README (English).md  README.md  README（日本語版）.md  crates.js  search-index.js  settings.html  source-files.js
cucoqu/: all.html  index.html  macro.point.html  sidebar-items.js  struct.Point.html  struct.Point3.html  trait.DerivativeCoefficients.html  trait.Point3Like.html  type.Cubic.html  type.CubicSpline.html  type.Quad.html  type.QuadSpline.html
cucoqu/co2qu/: constant.MAX_QUAD_POW2.html  enum.ConicKind.html  index.html  sidebar-items.js  struct.Conic.html  trait.BelowQuadTolerance.html  trait.Chop.html  trait.QuadPowerOf2.html
cucoqu/co2qu/chop/: trait.Chop.html
cucoqu/co2qu/consts/: constant.MAX_QUAD_POW2.html
cucoqu/co2qu/pow2/: trait.BelowQuadTolerance.html  trait.QuadPowerOf2.html
cucoqu/cu2qu/: index.html  sidebar-items.js  struct.ApproxNotFoundError.html  trait.CubicApprox.html  trait.CubicFarthestFitInside.html  trait.CurveToQuadratic.html  trait.CurvesToQuadratic.html
cucoqu/p3d/: struct.Point3.html  trait.Point3Like.html
cucoqu/qu2cu/: index.html  sidebar-items.js  trait.QuadToCubic.html
cucoqu/types/: struct.Point.html  trait.DerivativeCoefficients.html  type.Cubic.html  type.CubicSpline.html  type.Quad.html  type.QuadSpline.html
implementors/core/clone/: trait.Clone.js
src/: coeffs.rs  lib.rs  p3d.rs  types.rs
src/co2qu/: chop.rs  consts.rs  eval.rs  extrema.rs  mod.rs  p3d.rs  pow2.rs
src/cu2qu/: mod.rs
src/qu2cu/: mod.rs
tests/: circle_logo.rs  cu2qu.rs
(+24 files in other folders)
