[package]
name = "cucoqu"
version = "0.1.0"
authors = ["Fredrick Brennan <copypaste@kittens.ph>", "MFEK Authors", "GPT-3"]
edition = "2021"
license = "Apache-2.0"
# crates.io
keywords = ["cubic", "conic", "quadratic", "bezier", "curve-conversion"]
description = "**cucoqu** is a Rust library for converting between different types of Bézier splines. Currently it only supports the types most commonly used in type design and drawing curves: **cu**bic Bézier curves, **qu**adratic Bézier curves, and one type of rational Bézier curve: **co**nic Bézier curves."
repository = "https://github.com/MFEK/cucoqu.rlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
num-traits = "0.2"
glifparser = { version = "1.2", default_features = false, features=["more-iof"] }
nalgebra = "0.31"
derive_more = "0.99"
log = "0.4"
